<resources>
    <string name="app_name">Excluzo</string>
    <string name="font">fonts/lato_regular.ttf</string>
    <string name="login">Excluzo Login</string>
    <string name="no_account">New User? Create One!</string>
    <string name="wrong">Something went wrong!!</string>
    <string name="electronics">Electronics</string>
    <string name="offers">Offers</string>
    <string name="food">Grocery</string>
    <string name="fashion">Fashion</string>
    <string name="recharge">Recharge</string>
    <string name="details">Details</string>
    <string name="specifications">Specifications</string>
    <string name="ratingsorreviews">Ratings &amp; Review</string>
    <string name="rate_and_write">Rate And write a Review</string>
    <string name="cart">Add to Cart</string>
    <string name="buynow">Buy Now</string>
    <string name="Rs">\u20B9</string>
    <string name="bullet">\u25CF</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
